# screen_record

./: .gitignore  Cargo.toml  README.md
libs/hbb_common/: Cargo.toml
libs/hbb_common/src/platform/: windows.rs
src/: main.rs
