[package]
name = "screen_record"
version = "0.1.0"
edition = "2021"

[dependencies]
scrap = { path = "libs/scrap", features = ["wayland"] }
webm = { git = "https://github.com/21pages/rust-webm" }
serde = {version="1.0", features=["derive"]}
repng = "0.2"


[workspace]
members = ["libs/scrap", "libs/hbb_common"]